log/build_2024-05-07_14-05-15/imageprocess/stderr.log
  File "/home/iclab/Desktop/ros2/install/imageprocess/lib/python3.10/site-packages/imageprocess/image_test.py", line 207
    Print contour information
          ^^^^^^^
SyntaxError: invalid syntax

